--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,16 +19,42 @@
     "plugins": [
         "react",
         "@typescript-eslint",
+        "react-hooks",
         "prettier"
     ],
     "rules": {
-        "import/no-unresolved": "error",
+        "prettier/prettier": "error",
+        "no-param-reassign": "off",
+        "no-underscore-dangle": "off",
+        "import/prefer-default-export": "off",
+        "react/jsx-props-no-spreading": "off",
+        "react/require-default-props": "off",
+        "camelcase": "off",
+        "import/no-extraneous-dependencies": "off",
+        "@typescript-eslint/no-empty-interface": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
+        "react/prop-types": "off",
         "react/jsx-filename-extension": [
             1,
             {
                 "extensions": [
                     ".tsx"
                 ]
+            }
+        ],
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": [
+            "error"
+        ],
+        "react/react-in-jsx-scope": "off",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "ts": "never",
+                "tsx": "never"
             }
         ]
     },
