--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/slider": "4.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
