--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-constants": "^13.1.1",
