--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ant-design/icons-react-native": "^2.3.2",
     "@ant-design/react-native": "^5.0.0",
     "@expo-google-fonts/inter": "^0.2.2",
+    "@gorhom/bottom-sheet": "^4.4.2",
+    "@highcharts/highcharts-react-native": "^3.1.7",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/segmented-control": "^2.2.2",
     "@react-native-community/slider": "4.2.1",
@@ -31,6 +33,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.11.1",
