--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "react-native-webview": "^11.22.5",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
