--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-app-loading": "~2.0.0",
     "expo-constants": "^13.1.1",
     "expo-font": "~10.1.0",
+    "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
     "rc-util": "^5.22.5",
     "react": "17.0.2",
