--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/segmented-control": "^2.2.2",
     "@react-native-community/slider": "4.2.1",
+    "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.27.2",
@@ -29,6 +30,7 @@
     "expo-font": "~10.1.0",
     "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "^0.13.3",
     "rc-util": "^5.22.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
